test/sema/positive/struct04.impala
struct S[A] {
    x: A
}

fn f() -> S[int] {
   S[int] { x: 5 }
}
