test/sema/negative/struct06.impala
struct S[A] {
    x: A
}

fn f() -> S {
   S[int, bool] { x: 5 }
}
